--- a/index.html
+++ b/index.html
@@ -6,31 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
         body {
             background-color: #f4f4f4;
         }
         header {
-            background: #0077cc;
+            background-color: #0077cc;
             color: white;
             padding: 15px;
             text-align: center;
         }
+        nav {
+            background-color: #eee;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
+            padding: 10px;
+        }
         nav button.active {
-            background-color: #0077cc !important;
-            color: white !important;
+            background-color: #0077cc;
+            color: white;
+        }
+        section {
+            display: none;
+            padding: 20px;
+        }
+        section.active {
+            display: block;
         }
         .resultado {
             background: white;
             padding: 15px;
             border-radius: 8px;
-            margin-top: 20px;
-            max-height: 400px;
-            overflow-y: auto;
+            margin-top: 15px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
-        table th {
+        .table th {
             background-color: #0077cc;
             color: white;
         }
@@ -42,121 +56,72 @@
     <h1>Controle Financeiro</h1>
 </header>
 
-<!-- Menu -->
-<nav class="nav justify-content-center bg-light py-2">
-    <button class="btn btn-outline-primary me-2 active" onclick="showTab('compra')">Registrar Compra</button>
-    <button class="btn btn-outline-primary me-2" onclick="showTab('entrada')">Registrar Entrada</button>
-    <button class="btn btn-outline-primary" onclick="showTab('resumo')">Resumo</button>
+<nav>
+    <button onclick="showTab('compra')" class="active btn btn-light">Registrar Compra</button>
+    <button onclick="showTab('entrada')" class="btn btn-light">Registrar Entrada</button>
+    <button onclick="showTab('resumo')" class="btn btn-light">Resumo</button>
 </nav>
 
-<div class="container my-4">
-
-    <!-- Registrar Compra -->
-    <section id="compra" class="active">
-        <h2>Registrar Compra</h2>
-        <div class="row g-2">
-            <div class="col-md-4">
-                <input id="compraPessoa" class="form-control" placeholder="Pessoa">
-            </div>
-            <div class="col-md-4">
-                <input id="compraDescricao" class="form-control" placeholder="Descrição">
-            </div>
-            <div class="col-md-4">
-                <input id="compraValor" class="form-control" placeholder="Valor" type="number">
-            </div>
-            <div class="col-md-4">
-                <input id="compraData" class="form-control" type="date">
-            </div>
-            <div class="col-md-4">
-                <select id="compraFormaPgto" class="form-select">
-                    <option value="C">Crédito</option>
-                    <option value="D">Débito</option>
-                </select>
-            </div>
-            <div class="col-md-4">
-                <input id="compraParcelas" class="form-control" placeholder="Parcelas" type="number" value="1">
-            </div>
-            <div class="col-md-4">
-                <input id="compraFonte" class="form-control" placeholder="Fonte (ex.: Salário)">
-            </div>
-        </div>
-        <button class="btn btn-primary mt-3" onclick="registrarCompra()">Registrar</button>
-        <div class="resultado" id="resultadoCompra"></div>
-    </section>
-
-    <!-- Registrar Entrada -->
-    <section id="entrada" style="display: none;">
-        <h2>Registrar Entrada (Salário)</h2>
-        <div class="row g-2">
-            <div class="col-md-4">
-                <input id="entradaPessoa" class="form-control" placeholder="Pessoa">
-            </div>
-            <div class="col-md-4">
-                <input id="entradaValorHora" class="form-control" placeholder="Valor Hora" type="number">
-            </div>
-            <div class="col-md-4">
-                <input id="entradaHorasUteis" class="form-control" placeholder="Horas Úteis no Mês" type="number">
-            </div>
-            <div class="col-md-4">
-                <input id="entradaMesAno" class="form-control" placeholder="Mês/Ano (MM/yyyy)">
-            </div>
-        </div>
-        <button class="btn btn-primary mt-3" onclick="registrarEntrada()">Registrar Entrada</button>
-        <div class="resultado" id="resultadoEntrada"></div>
-    </section>
-
-    <!-- Resumo -->
-    <section id="resumo" style="display: none;">
-        <h2>Resumo por Pessoa e Período</h2>
-        <div class="row g-2">
-            <div class="col-md-4">
-                <input id="resumoPessoa" class="form-control" placeholder="Pessoa">
-            </div>
-            <div class="col-md-4">
-                <input id="resumoDataInicio" class="form-control" type="date">
-            </div>
-            <div class="col-md-4">
-                <input id="resumoDataFim" class="form-control" type="date">
-            </div>
-        </div>
-        <button class="btn btn-primary mt-3" onclick="buscarResumo()">Buscar Resumo</button>
-        <div class="resultado" id="resumoResultado"></div>
-    </section>
-
-</div>
-
-<!-- Modal de Carregando -->
-<div class="modal fade" id="modalLoading" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content bg-light text-center">
-      <div class="modal-body">
-        <div class="spinner-border text-primary" role="status">
-          <span class="visually-hidden">Carregando...</span>
-        </div>
-        <p class="mt-3">Aguarde, processando...</p>
-      </div>
+<section id="compra" class="active">
+    <h2>Registrar Compra</h2>
+    <div class="d-flex flex-wrap gap-2">
+        <input id="compraPessoa" class="form-control" placeholder="Pessoa">
+        <input id="compraDescricao" class="form-control" placeholder="Descrição">
+        <input id="compraValor" class="form-control" placeholder="Valor" type="number">
+        <input id="compraData" class="form-control" type="date">
+        <select id="compraFormaPgto" class="form-select">
+            <option value="C">Crédito</option>
+            <option value="D">Débito</option>
+        </select>
+        <input id="compraParcelas" class="form-control" placeholder="Parcelas" type="number" value="1">
+        <input id="compraFonte" class="form-control" placeholder="Fonte (ex.: Salário)">
     </div>
-  </div>
-</div>
+    <br>
+    <button class="btn btn-primary" onclick="registrarCompra()">Registrar</button>
+    <div class="resultado" id="resultadoCompra"></div>
+</section>
+
+<section id="entrada">
+    <h2>Registrar Entrada (Salário)</h2>
+    <div class="d-flex flex-wrap gap-2">
+        <input id="entradaPessoa" class="form-control" placeholder="Pessoa">
+        <input id="entradaValorHora" class="form-control" placeholder="Valor Hora" type="number">
+        <input id="entradaHorasUteis" class="form-control" placeholder="Horas Úteis no Mês" type="number">
+        <input id="entradaMesAno" class="form-control" placeholder="Mês/Ano (MM/yyyy)">
+    </div>
+    <br>
+    <button class="btn btn-primary" onclick="registrarEntrada()">Registrar Entrada</button>
+    <div class="resultado" id="resultadoEntrada"></div>
+</section>
+
+<section id="resumo">
+    <h2>Resumo por Pessoa e Período</h2>
+    <div class="d-flex flex-wrap gap-2">
+        <input id="resumoPessoa" class="form-control" placeholder="Pessoa">
+        <input id="resumoDataInicio" class="form-control" type="date" required>
+        <input id="resumoDataFim" class="form-control" type="date" required>
+    </div>
+    <br>
+    <button class="btn btn-primary" onclick="buscarResumo()">Buscar Resumo</button>
+    <div class="resultado" id="resumoResultado"></div>
+</section>
 
 <!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
     const apiBase = 'https://controlefinanceiroapi.onrender.com/api/compra';
 
     function showTab(tab) {
         document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('active'));
-        document.querySelectorAll('section').forEach(sec => sec.style.display = 'none');
-
+        document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
         document.querySelector(`nav button[onclick="showTab('${tab}')"]`).classList.add('active');
-        document.getElementById(tab).style.display = 'block';
+        document.getElementById(tab).classList.add('active');
     }
 
-    function showLoading() {
-        const modal = new bootstrap.Modal(document.getElementById('modalLoading'));
-        modal.show();
-        return modal;
+    function formatDateBR(dateStr) {
+        const date = new Date(dateStr);
+        return date.toLocaleDateString('pt-BR');
     }
 
     async function registrarCompra() {
@@ -170,7 +135,8 @@
             fonte: document.getElementById('compraFonte').value || "Salário"
         };
 
-        const modal = showLoading();
+        const loading = bootstrap.Modal.getOrCreateInstance(document.getElementById('loadingModal'));
+        loading.show();
 
         try {
             const res = await fetch(`${apiBase}/RegistrarCompra`, {
@@ -179,19 +145,17 @@
                 body: JSON.stringify(payload)
             });
 
-            modal.hide();
+            const resultado = await res.json();
 
             if (!res.ok) {
-                const erro = await res.text();
-                alert("Erro ao registrar compra: " + erro);
+                alert("Erro ao registrar compra: " + resultado);
+                loading.hide();
                 return;
             }
 
-            const resultado = await res.json();
             alert(`Sua compra foi registrada, com ID ${resultado.id}`);
 
-            document.getElementById('resultadoCompra').innerText = JSON.stringify(resultado, null, 2);
-
+            document.getElementById('resultadoCompra').innerText = '';
             document.getElementById('compraPessoa').value = '';
             document.getElementById('compraDescricao').value = '';
             document.getElementById('compraValor').value = '';
@@ -201,8 +165,9 @@
             document.getElementById('compraFonte').value = '';
 
         } catch (error) {
-            modal.hide();
             alert("Erro ao conectar na API: " + error.message);
+        } finally {
+            loading.hide();
         }
     }
 
@@ -214,23 +179,14 @@
             mesAno: document.getElementById('entradaMesAno').value
         };
 
-        const modal = showLoading();
+        const res = await fetch(`${apiBase}/RegistrarEntrada`, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(payload)
+        });
 
-        try {
-            const res = await fetch(`${apiBase}/RegistrarEntrada`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(payload)
-            });
-
-            const text = await res.text();
-            document.getElementById('resultadoEntrada').innerText = text;
-            modal.hide();
-
-        } catch (error) {
-            modal.hide();
-            alert("Erro ao conectar na API: " + error.message);
-        }
+        const text = await res.text();
+        document.getElementById('resultadoEntrada').innerText = text;
     }
 
     async function buscarResumo() {
@@ -238,20 +194,23 @@
         const dataInicio = document.getElementById('resumoDataInicio').value;
         const dataFim = document.getElementById('resumoDataFim').value;
 
-        const modal = showLoading();
+        if (!dataInicio || !dataFim) {
+            alert("Por favor, preencha as datas de início e fim.");
+            return;
+        }
+
+        const loading = bootstrap.Modal.getOrCreateInstance(document.getElementById('loadingModal'));
+        loading.show();
 
         try {
             const res = await fetch(`${apiBase}/ResumoPessoaPeriodo?pessoa=${pessoa}&dataInicio=${dataInicio}&dataFim=${dataFim}`);
+            const resultado = await res.json();
 
             if (!res.ok) {
-                const erro = await res.text();
-                modal.hide();
-                alert("Erro ao buscar resumo: " + erro);
+                alert("Erro ao buscar resumo: " + resultado);
+                loading.hide();
                 return;
             }
-
-            const resultado = await res.json();
-            modal.hide();
 
             let html = `
                 <h4>Resumo de ${resultado.pessoa}</h4>
@@ -264,20 +223,20 @@
             if (resultado.compras.length > 0) {
                 html += `
                     <div class="table-responsive">
-                        <table class="table table-bordered table-striped table-sm">
-                            <thead>
-                                <tr>
-                                    <th>IdLan</th>
-                                    <th>Compra</th>
-                                    <th>Valor</th>
-                                    <th>Forma Pgto</th>
-                                    <th>Parcela</th>
-                                    <th>Fonte</th>
-                                    <th>Data</th>
-                                    <th>Mes/Ano</th>
-                                </tr>
-                            </thead>
-                            <tbody>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>IdLan</th>
+                                <th>Compra</th>
+                                <th>Valor</th>
+                                <th>Forma Pgto</th>
+                                <th>Parcela</th>
+                                <th>Fonte</th>
+                                <th>Data</th>
+                                <th>Mes/Ano</th>
+                            </tr>
+                        </thead>
+                        <tbody>
                 `;
 
                 resultado.compras.forEach(c => {
@@ -289,13 +248,17 @@
                             <td>${c.FormaPgto}</td>
                             <td>${c.Parcela}</td>
                             <td>${c.Fonte}</td>
-                            <td>${new Date(c.Data).toLocaleDateString('pt-BR')}</td>
+                            <td>${formatDateBR(c.Data)}</td>
                             <td>${c.MesAno}</td>
                         </tr>
                     `;
                 });
 
-                html += `</tbody></table></div>`;
+                html += `
+                        </tbody>
+                    </table>
+                    </div>
+                `;
             } else {
                 html += `<p>Não há compras neste período.</p>`;
             }
@@ -303,11 +266,24 @@
             document.getElementById('resumoResultado').innerHTML = html;
 
         } catch (error) {
-            modal.hide();
             alert("Erro ao conectar na API: " + error.message);
+        } finally {
+            loading.hide();
         }
     }
 </script>
+
+<!-- Modal de carregamento -->
+<div class="modal fade" id="loadingModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content text-center">
+      <div class="modal-body">
+        <div class="spinner-border text-primary" role="status"></div>
+        <p class="mt-3">Aguarde, carregando...</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
